--- a/tictactoe/tictactoe/tictactoe.csproj
+++ b/tictactoe/tictactoe/tictactoe.csproj
@@ -42,6 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Play.cs" />
+    <Compile Include="View.cs" />
+    <Compile Include="Player.cs" />
+    <Compile Include="Com.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
